syntax = "proto3";

package feedbackService;

message TestEventFeedbackServiceCommitted {
  string test = 1;
  repeated string array = 2;
}
