syntax = "proto3";

package productService;

message TestEventProductServiceCommitted {
  string test = 1;
  repeated string array = 2;
}
