syntax = "proto3";

package userService;

import "google/protobuf/timestamp.proto";
import "user-service/error.proto";

service UserService {

  rpc GetUserByClientAccountId (GetUserByClientAccountId.Request) returns (GetUserByClientAccountId.Response);
  rpc GetUserById (GetUserById.Request) returns (GetUserById.Response);

  /*CONSUMER*/
  rpc GetConsumerByClientAccountId (GetConsumerByClientAccountId.Request) returns (GetConsumerByClientAccountId.Response);
  rpc RegisterConsumer (RegisterConsumer.Request) returns (RegisterConsumer.Response);
  rpc UpdateConsumer (UpdateConsumer.Request) returns (UpdateConsumer.Response);

  /*SELLER*/
  rpc GetSellerByClientAccountId (GetSellerByClientAccountId.Request) returns (GetSellerByClientAccountId.Response);
  rpc GetSellersByTags (GetSellersByTags.Request) returns (GetSellersByTags.Response);
  rpc RegisterSeller (RegisterSeller.Request) returns (RegisterSeller.Response);
  rpc UpdateSeller (UpdateSeller.Request) returns (UpdateSeller.Response);
  rpc UpdateSellerSetting (UpdateSellerSetting.Request) returns (UpdateSellerSetting.Response);
}

message GetUserByClientAccountId {
  message Request {
    string clientAccountId = 1;
  }

  message Response {
    Error error = 1;
    User user = 2;
  }
}

message GetUserById {
  message Request {
    string userId = 1;
  }

  message Response {
    Error error = 1;
    User user = 2;
  }
}

message GetConsumerByClientAccountId {
  message Request {
    string clientAccountId = 1;
  }

  message Response {
    Error error = 1;
    User user = 2;
  }
}

message User {
  string id = 1;
  string clientAccountId = 2;
  string name = 3;
  string surname = 4;
  string userName = 5;
  string email = 6;
  string phone = 7;
  string company = 8;
  string type = 9;
  string avatar = 10;
  User.Setting setting = 11;
  string createdAt = 12;
  string updatedAt = 13;
  string locale = 14;

  message Setting {
    string id = 1;
    repeated string tags = 2;
    bool emails = 3;
  }
}

message RegisterConsumer {
  message Request {
    User user = 1;
  }
  message Response {
    Error error = 1;
    bool isSuccess = 2;
  }
}

message UpdateConsumer{
  message Request {
    string clientAccountId = 1;
    string surname = 2;
    string name = 3;
    string company = 4;
    string phone = 5;
    string userName = 6;
    string avatar = 7;
    string locale = 8;
  }
  message Response {
    Error error = 1;
    User user = 2;
  }
}

message GetSellerByClientAccountId {
  message Request {
    string clientAccountId = 1;
  }

  message Response {
    Error error = 1;
    User user = 2;
  }
}

message RegisterSeller {
  message Request {
    User user = 1;
  }
  message Response {
    Error error = 1;
    bool isSuccess = 2;
  }
}

message UpdateSeller{
  message Request {
    string clientAccountId = 1;
    string surname = 2;
    string name = 3;
    string company = 4;
    string phone = 5;
    string userName = 6;
    string avatar = 7;
    string locale = 8;
  }
  message Response {
    Error error = 1;
    User user = 2;
  }
}

message UpdateSellerSetting{
  message Request {
    string userId = 1;
    User.Setting setting = 2;
  }
  message Response {
    Error error = 1;
    bool isSuccess = 2;
  }
}

message GetSellersByTags {
  message Request {
    repeated string tags = 1;
  }
  message Response {
    Error error = 1;
    repeated User users = 2;
  }
}
